Added basic favicon back into the source, removed useless pngs of the react app default icon.

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
 
+  <!-- App Favicon -->
+  <link rel="icon" href="./favicon.ico" type="image/x-icon" />
   <!-- Manifest File -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <!-- Font Awesome -->
