Added image folder containing all 12 images for each tile the user will click, also added a json to hold the data about user events.

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <!-- Document Title -->
-  <title>React Memory Game</title>
+  <title>React Memory Game!</title>
 </head>
 
 <body>
